<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih">

    <TextView
        android:id="@+id/atas"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardviewqr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judulqr"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewqr"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:cardCornerRadius="20dp"
        android:background="@drawable/rounded_image"
        app:layout_constraintTop_toBottomOf="@+id/atas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/qrcodes"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@color/putih"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/countqr"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/cardviewqr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/tutup"
        app:layout_constraintTop_toBottomOf="@+id/valid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/bottoms"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>